--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,24 @@
   "description": "Sereynity Backend initialized on 2 September",
   "main": "index.js",
   "scripts": {
+    "format": "modern format",
+    "lint": "modern lint",
+    "precommit": "modern precommit",
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "modern test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "modern-node": "^2.9.0"
   }
 }
