--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "lint": "modern lint",
     "precommit": "modern precommit",
     "start": "nodemon index.js",
-    "test": "modern test"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +17,22 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-mocks": "^1.3.2",
+    "http-status": "^1.7.4",
     "joi": "^17.13.3",
     "mongoose": "^8.6.0",
+    "node-mocks-http": "^1.16.0",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.0",
+    "jest": "^29.7.0",
     "modern-node": "^2.9.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
