--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "format": "modern format",
     "lint": "modern lint",
     "precommit": "modern precommit",
-    "start": "nodemon index.js",
+    "start": "NODE_ENV=development nodemon index.js",
     "test": "jest"
   },
   "author": "",
@@ -17,19 +17,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "http-mocks": "^1.3.2",
-    "http-status": "^1.7.4",
+    "faker": "^6.6.6",
     "joi": "^17.13.3",
     "mongoose": "^8.6.0",
     "node-mocks-http": "^1.16.0",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^9.0.0",
-    "jest": "^29.7.0",
     "modern-node": "^2.9.0"
   },
-  "jest": {
+  "jests": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
