--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "joi": "^17.13.3",
     "mongoose": "^8.6.0",
     "node-mocks-http": "^1.16.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "modern-node": "^2.9.0"
