--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "faker": "^6.6.6",
+    "http-status": "^2.0.0",
     "joi": "^17.13.3",
     "mongoose": "^8.6.0",
     "node-mocks-http": "^1.16.0",
@@ -25,6 +25,8 @@
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.2.0",
+    "jest": "^29.7.0",
     "modern-node": "^2.9.0"
   },
   "jests": {
