--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status": "^2.0.0",
     "joi": "^17.13.3",
     "mongoose": "^8.6.0",
     "node-mocks-http": "^1.16.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
     "unique-names-generator": "^4.7.1"
   },
