--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,12 @@
     "express": "^4.19.2",
     "http-status": "^2.0.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "node-mocks-http": "^1.16.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
+    "path": "^0.12.7",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
