--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,8 @@
   "devDependencies": {
     "@faker-js/faker": "^9.2.0",
     "jest": "^29.7.0",
-    "modern-node": "^2.9.0"
+    "modern-node": "^2.9.0",
+    "supertest": "^7.0.0"
   },
   "jests": {
     "testEnvironment": "node",
