--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
+    "supertest": "^7.0.0",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
