--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "format": "modern format",
     "lint": "modern lint",
     "precommit": "modern precommit",
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "jest"
   },
   "author": "",
